<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.abbas.aliei.todo.abbas.todo.com.abbas.aliei.todo.AddNoteActivity">
    <RelativeLayout
        android:id="@+id/rl_addNote_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNote_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/sv_addNote_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_addNote_toolbar"
        android:layout_above="@+id/button_addNote_save">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_addNote_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:hint="@string/addNote_title_hint"
                android:layout_margin="8dp"/>
            <EditText
                android:id="@+id/et_addNote_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/addNote_enterSomething_hint"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_addNote_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/addNote_save"
        android:textSize="18sp"
        android:background="@drawable/primary_button_background"
        android:layout_margin="8dp"
        android:textColor="@color/colorAccent"/>
</RelativeLayout>
